Correct a CSS error to prevent the calendar view to be vertically aligned on top. Added two routes for the viewNextMonth() and viewPrevMonth() methods of Calendars.

--- a/calendar/public/stylesheets/calendar.css
+++ b/calendar/public/stylesheets/calendar.css
@@ -1,14 +1,16 @@
 #calendar_calendar {
 	height: 100%;
+	vertical-align: top;
 }
 
-#calender_sidebar {
+#calendar_sidebar {
 	text-align: center;
+	padding: 0px 10px;
+	vertical-align: top;
 }
 
 #calendar_sidebar h1 {
 	font-size: 20px;
-	vertical-align: top;
 }
 
 #calendar_header {
@@ -20,8 +22,6 @@
 	border-width: 0px;
 	border-spacing: 2px;
 	border-color: gray;
-	margin: 0px 10px;
-	vertical-align: top;
 }
 
 #calendar_grid td, #calendar_grid th {
@@ -36,16 +36,8 @@
 	padding: 3px 0px 3px;
 }
 
-#calendar_header a {
-	display: inline;
-}
-
-#calendar_footer a {
-	display: inline;
-}
-
 #calendar_grid .hasEvents {
-	/*text-decoration: underline;*/
+	text-decoration: underline;
 	font-weight: bold;
 }
 
